--- a/views/partials/incs/menunav.hbs
+++ b/views/partials/incs/menunav.hbs
@@ -2,8 +2,8 @@
 <div class="sidebar" data-color="green" data-background-color="black" data-image="/assets/admin/img/sidebar-2.jpg">
       <div class="logo super-headerx">
         <a href="/" class="success-link">
-          <img src="/assets/admin/img/icons/crown.svg" class="menu-logo"/>
-          Tufike Pamoja
+          <img src="/assets/admin/img/icons/lt-blue.svg" class="menu-logo"/>
+          <span class="blue-link">LTS Admin System</span>
         </a>
       </div>
       <div class="sidebar-wrapper">
