--- a/views/partials/incs/topnav.hbs
+++ b/views/partials/incs/topnav.hbs
@@ -4,6 +4,8 @@
     <div class="container-fluid">
       <div class="navbar-wrapper current-rates">
         <input type="hidden" class="aid" value="{{pdata.uid}}">
+        <img src="/assets/admin/img/icons/crown.svg" class="icrown"/>
+        <span class="icrown-text green-link">Tufike Pamoja Cabs</span>
         <a class="navbar-brand nav-link warning-link hidden" onclick="nonPersistentNotification()" href="javascript:void(0)">
           <i class="f7-icons align-middle size-20">bell_fill</i>
           Non Persist
@@ -25,7 +27,7 @@
       </button>
       <div class="collapse navbar-collapse justify-content-end">
         <ul class="navbar-nav">
-          <li class="nav-item">
+          <li class="nav-item d-xs-none">
             <a class="nav-link" href="/notifications" aria-expanded="false">
               <i class="material-icons">notifications</i>
               <span class="notification">4</span>
