--- a/views/partials/modules/profile.hbs
+++ b/views/partials/modules/profile.hbs
@@ -5,7 +5,7 @@
       <div class="shap two"></div>
       <div class="shap one three"></div>
       <div class="shap two four"></div>
-      <div class="card-header bg-blue">
+      <div class="card-header bg-orange">
         <h4 class="card-title">&nbsp;</h4>
         <p class="card-category">&nbsp;</p>
       </div>
@@ -39,25 +39,25 @@
               <div class="col-md-6">
                 <div class="form-group bmd-form-group">
                   <label>First Name</label>
-                  <input type="text" class="form-control first-name" autocomplete="off" spellcheck="false">
+                  <input type="text" class="form-control first-name ilevel" autocomplete="off" spellcheck="false">
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="form-group bmd-form-group">
                   <label>Last Name</label>
-                  <input type="text" class="form-control last-name" autocomplete="off" spellcheck="false">
+                  <input type="text" class="form-control last-name ilevel" autocomplete="off" spellcheck="false">
                 </div>
               </div>
             <div class="col-md-6">
               <div class="form-group bmd-form-group">
                 <label>Email address</label>
-                <input type="email" class="form-control email-address" autocomplete="off" spellcheck="false">
+                <input type="email" class="form-control email-address ilevel" autocomplete="off" spellcheck="false">
               </div>
             </div>
             <div class="col-md-6">
               <div class="form-group bmd-form-group">
                 <label>Phone Number</label>
-                <input type="text" class="form-control phone-number" autocomplete="off" spellcheck="false">
+                <input type="text" class="form-control phone-number ilevel" autocomplete="off" spellcheck="false">
               </div>
             </div>
           </div>
@@ -70,7 +70,7 @@
             </div>
             <div class="col-md-6">
               <div class="form-group bmd-form-group">
-                <button type="button" class="btn bg-purple waves-effect float-left mt-2 mb-2">Change Password</button>
+                <button type="button" class="btn bg-purple waves-effect float-left mt-2 mb-2 change-password ilevel">Change Password</button>
               </div>
             </div>
             <div class="col-md-6">
