--- a/views/partials/pages/home.hbs
+++ b/views/partials/pages/home.hbs
@@ -8,7 +8,7 @@
                     <i class="f7-icons">person_3_fill</i>
                   </div>
                   <p class="card-category">Rides</p>
-                  <h3 class="card-title count count-rides">0</h3>
+                  <h3 class="card-title count count-rides orange-link">0</h3>
                 </div>
                 <div class="card-footer">
                   <div class="stats">
@@ -24,7 +24,7 @@
                     <i class="f7-icons">person_2_fill</i>
                   </div>
                   <p class="card-category">Riders</p>
-                  <h3 class="card-title count count-riders">0</h3>
+                  <h3 class="card-title count count-riders green-link">0</h3>
                 </div>
                 <div class="card-footer">
                   <div class="stats">
@@ -36,15 +36,15 @@
             <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6">
               <div class="card card-stats">
                 <div class="card-header card-header-info card-header-icon">
-                  <div class="card-icon">
+                  <div class="card-icon bg-blue">
                     <i class="material-icons">airline_seat_recline_normal</i>
                   </div>
                   <p class="card-category">Drivers</p>
-                  <h3 class="card-title count count-drivers">0</h3>
+                  <h3 class="card-title count count-drivers blue-link">0</h3>
                 </div>
                 <div class="card-footer">
                   <div class="stats">
-                    <a href="/drivers" class="info-link"><span class="count count-other-drivers">0</span> Active Drivers</a>
+                    <a href="/drivers" class="blue-link"><span class="count count-other-drivers">0</span> Active Drivers</a>
                   </div>
                 </div>
               </div>
@@ -56,7 +56,7 @@
                     <i class="f7-icons">car_fill</i>
                   </div>
                   <p class="card-category">Vehicles</p>
-                  <h3 class="card-title count count-owners">0</h3>
+                  <h3 class="card-title count count-owners fire-link">0</h3>
                 </div>
                 <div class="card-footer">
                   <div class="stats">
