--- a/views/partials/incs/menunav.hbs
+++ b/views/partials/incs/menunav.hbs
@@ -1,5 +1,5 @@
 <div class="wrapper">
-<div class="sidebar" data-color="green" data-background-color="black" data-image="/assets/admin/img/sidebar-2.jpg">
+<div class="sidebar" data-color="blue" data-background-color="black" data-image="/assets/admin/img/sidebar-2.jpg">
       <div class="logo super-headerx">
         <a href="/" class="success-link">
           <img src="/assets/admin/img/icons/lt-blue.svg" class="menu-logo"/>
