--- a/views/partials/incs/pagefooter.hbs
+++ b/views/partials/incs/pagefooter.hbs
@@ -1,4 +1,4 @@
-<footer class="xfooter sticky-bottom">
+<footer class="xfooter sticky-bottom bg-dark-gradient-reverse">
 	<div class="row">
 		<div class="col-md-2 d-xs-none">
 			<i class="f7-icons size-20 align-middle nm-x text-success">person_3_fill</i>
