--- a/views/partials/modules/rnotificationform.hbs
+++ b/views/partials/modules/rnotificationform.hbs
@@ -2,20 +2,20 @@
   <div class="bg-transluscent">
   <div class="col-md-12">
     <div class="form-group mt-4">
-      <label>Notification Header</label>
+      <label>Notification Header (Title)</label>
       <input type="text" class="form-control not-header">
     </div>
   </div>
   <div class="col-md-12">
     <div class="form-group mt-4">
-      <label>Notification Content</label>
+      <label>Notification Content (Message)</label>
       <textarea class="form-control not-content"></textarea>
     </div>
   </div>
 </div>
   <div class="col-md-6 offset-md-6">
     <div class="form-group">
-      <button class="btn btn-success float-right send-notification">Send Push Notification</button>
+      <button class="btn btn-lg bg-blue waves-effect float-right send-notification">Send Push Notification</button>
     </div>
   </div>
 </div>
