--- a/views/partials/pages/riders.hbs
+++ b/views/partials/pages/riders.hbs
@@ -8,7 +8,11 @@
                 <a href="javascript:void(0)" class="refresh-data float-right">
                   <i class="material-icons" role="button">refresh</i>
                 </a>
-                <button class="btn bg-orange animate__animated animate__fadeIn btn-large btn-circle waves-effect waves-circle waves-float btn-super notify-all-riders hidden"><i class="material-icons">notifications_active</i></button>
+                <div class="actions-tab bg-dark-gradient animate__animated animate__fadeIn hidden">
+                  <div class="action waves-effect blue-link notify-all-riders"><i class="icon f7-icons">bell_fill</i></div>
+                  <div class="action waves-effect purple-link email-all-riders"><i class="icon f7-icons">envelope_fill</i></div>
+                  <div class="action waves-effect orange-link sms-all-riders"><i class="icon f7-icons">chat_bubble_text_fill</i></div>
+                </div>
             </h4>
           </div>
           <div class="card-body xpage">
@@ -28,10 +32,9 @@
                     <th>Registration Date</th>
                     <th>Activation</th>
                     <th>Rides</th>
-                    <th>Favorites</th>
+                    <th>Favs</th>
                     <th>ACODE</th>
-                    <th class="text-center">Actions</th>
-                    <th class="td-actions text-right">More</th>
+                    <th class="td-actions text-right">All Rider Actions</th>
                   </tr>
                 </thead>
                 <tbody class="all-riders animate__animated">
