--- a/views/partials/pages/transactions.hbs
+++ b/views/partials/pages/transactions.hbs
@@ -60,7 +60,7 @@
                 </table>
               </div>
               <div class="tab-pane table-responsive" id="driver-payments">
-              <table class="table table-hover" id="dtable">
+              <table class="table table-hover" id="paymentstable">
                 <thead class=" text-success">
                   <tr>
                     <th>#</th>
