--- a/public/assets/admin/css/app.css
+++ b/public/assets/admin/css/app.css
@@ -5,6 +5,38 @@
   bottom: 0;
   margin: 15px;
 }
+.img-round{
+  border-radius: 200px;
+}
+.mail-message{
+  min-height: 240px;
+}
+.actions-tab{
+  position: absolute;
+  padding: 5px;
+  border-radius: 4px;
+  width: 200px;
+  height: 40px;
+  left: 50%;
+  bottom: 0;
+  margin-left: -100px;
+  margin-bottom: -20px;
+}
+.actions-tab .action{
+  width: 33.333333%;
+  float: left;
+  text-align: center;
+  border-radius: 4px;
+  padding-top: 3px;
+}
+.iconit:hover > i{
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+  -webkit-background-clip: text;
+  background-clip: text;
+  background-image: linear-gradient(60deg, #5f3dc4, #862e9c) !important;
+  color: transparent !important;
+}
 .purple-link
 {
   -webkit-background-clip: text;
@@ -1553,7 +1585,11 @@ form p:last-child {
 .cms-editor {
     height: 200px !important;
 }
-
+.edit-cms{
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
 .dark-image-bg {
     position: fixed;
     width: 100%;
@@ -1594,6 +1630,10 @@ form p:last-child {
 .data-card {
     min-height: 520px;
     margin-bottom: 20px !important;
+}
+.data-card-fit{
+  height: calc(100vh - 200px);
+  overflow-y: auto;
 }
 
 .bg-transparent {
@@ -1673,9 +1713,13 @@ span.badge {
     font-weight: bold;
 }
 
-.navbar-bg-dark {
-    background: #243956 !important;
+.navbar-bg-dark, .bg-dark-gradient {
+    background-image: linear-gradient(60deg, #040A2D, #243956) !important;
     color: #fff !important;
+}
+.navbar-bg-dark-reverse, .bg-dark-gradient-reverse {
+    background-image: linear-gradient(60deg, #243956, #040A2D) !important;
+    color: rgba(255,255,255,0.6) !important;
 }
 
 .map-client-location, .map-driver-location {
@@ -1719,13 +1763,11 @@ span.badge {
 
 .xfooter {
     width: 100%;
-    background: #061c38 !important;
     position: fixed;
     bottom: 0;
     padding: 1px 30px;
     font-size: 10px;
     z-index: 1030;
-    color: #8b92a9;
 }
 
 .fix-foot {
