--- a/views/partials/incs/topnav.hbs
+++ b/views/partials/incs/topnav.hbs
@@ -45,6 +45,7 @@
                   <a class="dropdown-item" href="/users">Users</a>
                   <a class="dropdown-item" href="/settings">Settings</a>
                   <a class="dropdown-item" href="/logout">Sign Out</a>
+                  <a class="dropdown-item" href="/icons">Icon Set</a>
                 </div>
               </li>
 
