Master Push with Github

--- a/views/partials/incs/footer.hbs
+++ b/views/partials/incs/footer.hbs
@@ -20,7 +20,7 @@
 <script src="/assets/admin/plugins/pace/pace.min.js"></script>
 <script src="/assets/admin/plugins/nouislider/nouislider.js"></script>
 <script>
-var env = 'dev';
+var env = 'live';
 if (env === 'dev') {
 var appUrl = 'http://localhost:4080',
     devUrl = 'http://localhost/lexacle/',
